Replaced coverage action

--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -32,6 +32,11 @@ jobs:
           go mod tidy
           go test -v -race -covermode atomic -coverprofile=covprofile -coverpkg=./... ./...
 
-      - name: Coveralls GitHub Action
-        uses: coverallsapp/github-action@v2.3.0
+      - name: Install goveralls
+        run: go install github.com/mattn/goveralls@latest
+
+      - name: Send coverage
+        env:
+          COVERALLS_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: goveralls -coverprofile=covprofile -service=github
 
